# scop

./: .gitignore  .gitmodules  .syntastic_c_config  CMakeLists.txt  Makefile  README.md  auteur  cat.xpm  container.xpm
inc/: scop.h  xpm.h
lib/glad/: CMakeLists.txt  glad.h
lib/glfw/src/: CMakeCache.txt  cmake_uninstall.cmake
lib/glfw/src/examples/: cmake_install.cmake
lib/glfw/src/src/: Makefile  cmake_install.cmake
lib/glfw/src/tests/: Makefile  clipboard  cmake_install.cmake  events  glfwinfo
lib/libft/: .syntastic_c_config  CMakeLists.txt  Makefile  ft_2compte_c.c  ft_2print.c  ft_2tabdel.c  ft_atoi.c  ft_bzero.c  ft_compte_c.c  ft_isalpha.c  ft_ischrcol.c  ft_isdigit.c  ft_isprint.c  ft_itoa_base.c  ft_lstadd.c  ft_lstaddend.c  ft_lstdel.c  ft_lstiter.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memmove.c  ft_nbline.c  ft_putchar.c  ft_putendl_fd.c  ft_putnbr.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strcpy.c  ft_strdel.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strmap.c  ft_strncat.c  ft_strnequ.c  (+6 more)
lib/libft/inc/: get_next_line.h  libft.h
lib/libft/includes/: get_next_line.h
lib/libft/src/: CMakeLists.txt  ft_indice_c.c  ft_isalnum.c  ft_isascii.c  ft_ischr.c  ft_itoa.c  ft_itoa_dec.c  ft_lstdelone.c  ft_lstmap.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memset.c  ft_power.c  ft_putchar_fd.c  ft_putendl.c  ft_putnbr_fd.c  ft_strclr.c  ft_strcmp.c  ft_strcpyc.c  ft_strdup.c  ft_strequ.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strncpy.c  ft_strnstr.c  ft_strstr.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  get_next_line.c
lib/tmp/src/: Makefile  cmake_install.cmake
lib/tmp/src/examples/: Makefile  offscreen
lib/tmp/src/tests/: cursor  iconify  monitors  msaa  reopen
objFiles/: .easyaf.obj.swp
ressource/texture/: bongo-cat.xpm
shaders/: VertexShader.glsl  fragShader.glsl
src/: .syntastic_c_config  CMakeLists.txt  callback.c  callback_utils.c  glad.c  init.c  initGlfw.c  init_mat.c  main.c  parsing.c  parsing_utils.c  shader.c  test.c  xpm.c
